<resources>
    <string name="app_name">Plato</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!--Default -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Notes Page-->
    <string name="notes_title">Note Title</string>
    <string name="my_notes">Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="type_note_title">Type note here..</string>
    <string name="miscellaneous">Options</string>
    <string name="pick_color">Pick Color</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel">cancel</string>

</resources>