<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notesContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Notes">

    <LinearLayout
        android:id="@+id/noteLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/navbar_notes"
        tools:layout_editor_absoluteX="12dp">

        <TextView
            android:id="@+id/notesText"
            android:layout_width="285dp"
            android:layout_height="match_parent"
            android:includeFontPadding="false"
            android:text="@string/my_notes"
            android:textColor="@color/colorDefaultNoteColor"
            android:textSize="36sp"
            app:fontFamily="@font/ubuntu_bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageAddNoteMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/notes_title"
            android:src="@drawable/ic_add"
            app:tint="@color/colorDefaultNoteColor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/notesText">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/notes_title"
            android:src="@drawable/ic_search"
            app:tint="@color/colorWhite" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorDefaultNoteColor"
            android:textSize="20sp"
            app:fontFamily="@font/ubuntu_regular" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="575dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="4dp"
        android:clipToPadding="false"
        android:paddingStart="15dp"
        android:paddingEnd="12dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/navbar"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch" />

</FrameLayout>